[package]
name = "jd"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6.3", features = ["web", "router"] }
dioxus-web = "0.6.3"
dioxus-router = "0.6.3"
log = "0.4"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "CanvasRenderingContext2d"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-logger = "0.2"
