[package]
name = "jd"
version = "0.1.0"
authors = ["Dioxus Labs <hello@dioxuslabs.com>"]
edition = "2021"
description = "A tailwindcss example using Dioxus"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DioxusLabs/dioxus/"
homepage = "https://dioxuslabs.com"
documentation = "https://dioxuslabs.com"
publish = false

[dependencies]
dioxus = { version = "0.6.3", features = ["web", "router"] }
dioxus-web = "0.6.3"
dioxus-router = "0.6.3"
log = "0.4"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "CanvasRenderingContext2d"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-logger = "0.2"
chrono = "0.4"
